# oop-hooks

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
hooks/: check_er_suffix.py  check_getters_setters.py  print_arguments.py
