[metadata]
name = oop_hooks
description = a set of hooks for oop
version = 0.1.0
author = Adam Piaseczny
author_email = test
license = MIT
url = https://github.com/TypicalAM

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    check-er-suffix = hooks.check_er_suffix:main
		check-getters-setters = hooks.check_getters_setters:main

